--- a/For JS.html
+++ b/For JS.html
@@ -5,10 +5,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
 </head>
 
-<body>
-  <script src='Lesson 4.js'></script>
+<body class="body">
+  <div class="youbue">
+    <div class="removeall">Удалить все</div>
+    <p>Ваши покупки</p>
+  </div>
+  <style>
+    .youbue {
+      padding: 50px;
+    }
+
+    .price {
+      padding: 10px;
+    }
+  </style>
+
+  <script src="Lesson 5 (1).js"></script>
 
 
 </body>
